@@ -113,10 +113,6 @@ compat_socket_selfpipe_alloc( void )
 
   compat_socket_selfpipe_t *self =
     libspectrum_new( compat_socket_selfpipe_t, 1 );
-  if( !self ) {
-    ui_error( UI_ERROR_ERROR, "%s: %d: out of memory", __FILE__, __LINE__ );
-    fuse_abort();
-  }
   
   self->self_socket = socket( AF_INET, SOCK_DGRAM, IPPROTO_UDP );
   if( self->self_socket == compat_socket_invalid ) {
