@@ -138,10 +138,7 @@ nic_enc28j60_t*
 nic_enc28j60_alloc( void )
 {
   nic_enc28j60_t *self = libspectrum_new( nic_enc28j60_t, 1 );
-  if( !self ) {
-    ui_error( UI_ERROR_ERROR, "%s:%d out of memory", __FILE__, __LINE__ );
-    fuse_abort();
-  }
+
   self->tap_fd = -1;
   self->spi_state = SPI_IDLE;
   return self;
